# proshop_fastapi

./: .pre-commit-config.yaml  README.md
.github/workflows/: backend_ci.yaml
backend/: pyproject.toml
backend/src/: config.py
frontend/src/actions/: orderActions.js
frontend/src/reducers/: productReducers.js
frontend/src/screens/: CartScreen.js  PlaceOrderScreen.js  ProductScreen.js
