[project]
name = "backend"
version = "0.1.0"
description = "Re-imagination of ProShop using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "pydantic-settings>=2.10.0",
]

[dependency-groups]
ci = [
    "pyright>=1.1.402",
    "ruff>=0.12.1",
]
dev = [
    "pre-commit>=4.2.0",
]

[tool.uv]
required-version = "==0.7.9"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E)  codes by default.
# pycodestyle warnings (W)
# Activate Security Rules (S) to replace bandit
# Enable the isort rules (I) to replace isort
# flake8-bugbear (B)
# flake8-simplify (SIM)
select = ["F", "E4", "E7", "E9", "W", "S", "I", "B","SIM"]

[tool.ruff.format]
skip-magic-trailing-comma = true
